# goadt

./: .gitignore  CHANGELOG.md  GoADT.cabal  LICENSE.md  README.md  goadt.cabal
.github/workflows/: build.yml  tests.yml
app/: Adt.hs  Main.hs  Parser.hs
examples/: Bool.go  Either.go  Int.go  Nat.go  Opt.go  goadt  main.go
tests/: Test.hs
